re-enable css minification put progress-bar into app.css because imports css imports are broken in ember-cli 3.1.4 (https://github.com/ember-cli/ember-cli/issues/7800) also add .uk-scope to every selector to avoid conflicts

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,10 +1,3 @@
-@import 'progress-bar.css';
-/*
-  TODO (maybe) use scss
-  https://ember-cli.com/asset-compilation
-  https://getuikit.com/docs/sass
-*/
-
 .uk-scope {
   display: inline-block;
   width: 100%;
@@ -15,15 +8,15 @@
   overflow-wrap: break-word;
 }
 
-.event-list-item:hover {
+.uk-scope .event-list-item:hover {
   display: block;
   background: #f5f5f5;
 }
 
-.lamp-red,
-.lamp-green,
-.lamp-orange,
-.lamp-yellow {
+.uk-scope .lamp-red,
+.uk-scope .lamp-green,
+.uk-scope .lamp-orange,
+.uk-scope .lamp-yellow {
   display: inline-block;
   height: 16px;
   width: 16px;
@@ -31,32 +24,32 @@
   margin-right: 8px;
 }
 
-.lamp-red {
+.uk-scope .lamp-red {
   background-color: red;
 }
 
-.lamp-green {
+.uk-scope .lamp-green {
   background-color: green;
 }
 
-.lamp-orange {
+.uk-scope .lamp-orange {
   background-color: orange;
 }
 
-.lamp-yellow {
+.uk-scope .lamp-yellow {
   background-color: yellow;
 }
 
-.details-table > tbody > tr > td:first-child {
+.uk-scope .details-table > tbody > tr > td:first-child {
   padding-right: 15px;
   font-weight: bolder;
 }
 
-.details-table td:last-child {
+.uk-scope .details-table td:last-child {
   white-space: pre-wrap;
 }
 
-.details-table td {
+.uk-scope .details-table td {
   vertical-align: top;
 }
 
@@ -71,7 +64,7 @@
 
 /* mobile */
 @media (max-width: 959px) {
-  .subscribe-button {
+  .uk-scope .subscribe-button {
     position: fixed;
     bottom: 0px;
     min-width: 200px;
@@ -82,14 +75,110 @@
 
 /* small mobile */
 @media (max-width: 449px) {
-  .details-table.table-collapse td {
+  .uk-scope .details-table.table-collapse td {
     display: block;
   }
   .uk-scope .details-table.table-collapse td:first-child {
     padding-bottom: 0;
   }
 
-  .details-table.table-collapse td:last-child {
+  .uk-scope .details-table.table-collapse td:last-child {
     padding-top: 12px;
   }
+}
+
+/*!
+ * progress bar
+ * based on https://ericheikes.com/creating-a-progress-bar-with-css/
+ */
+.uk-scope ol.steps {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: bold;
+}
+
+.uk-scope ol.steps li {
+  list-style-image: none;
+  list-style-type: none;
+  margin-left: 0;
+  text-align: center;
+  background: #E0ECFF;
+  position: relative;
+  margin-left: 43px;
+}
+
+.uk-scope ol.steps li:after {
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  content: " ";
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  border: solid transparent;
+  border-left-color: #E0ECFF;
+  border-width: 19px;
+  margin-top: -19px;
+}
+
+.uk-scope ol.steps li:first-child {
+  margin-left: 0;
+}
+
+.uk-scope ol.steps li:first-child span {
+  padding: 9px;
+}
+
+.uk-scope ol.steps li:first-child span:after {
+  border: none;
+}
+
+.uk-scope ol.steps li span {
+  display: block;
+  padding: 9px 28px 9px 9px;
+}
+
+.uk-scope ol.steps li span:after {
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  content: " ";
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  border: solid #E0ECFF;
+  border-left-color: transparent;
+  border-width: 19px;
+  margin-top: -19px;
+}
+
+.uk-scope ol.steps>li {
+  float: left;
+  color: black;
+}
+
+.uk-scope ol.steps li.current {
+  color: #fff;
+  background: #1e87f0;
+}
+
+.uk-scope ol.steps li.current:after {
+  border-left-color: #1e87f0;
+}
+
+.uk-scope ol.steps li.current span:after {
+  border-color: #1e87f0;
+  border-left-color: transparent;
+}
+
+.uk-scope ol.steps li.step1 {
+  z-index: 1;
+}
+
+.uk-scope ol.steps li.step2 {
+  z-index: 0;
 }
